[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/room.gd" type="Script" id=1]

[sub_resource type="World" id=1]

[node name="room" type="Viewport"]
size = Vector2( 2, 2 )
own_world = true
world = SubResource( 1 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="clients" type="Spatial" parent="."]

[node name="TimerClientsReady" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerClientsReady" to="." method="_on_TimerClientsReady_timeout"]
